--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+    font-family: "BEYNO";
+    src: url('../fonts/BEYNO.ttf');
+}
 
 :root {
     --accent: #08010d;
