--- a/css/style.css
+++ b/css/style.css
@@ -219,8 +219,43 @@ body, html {
 .mascot {
   position:fixed;
   bottom:0px;
-  left:5%;
-  max-width:30%;
-  max-height:30%;
-  opacity: 0.9
+  left:.1%;
+  max-width:25%;
+  max-height:25%;
+  opacity: 0.7;
+  transform: scaleX(-1);
+  filter: drop-shadow(4px 0px 5px rgba(228, 14, 255, 0.59));
   }
+
+.mascot2 {
+  position:fixed;
+  bottom:0px;
+  left:43%;
+  max-width:20%;
+  max-height:20%;
+  opacity: 0.7;
+  filter: drop-shadow(-4px 0px 2px rgba(228, 14, 255, 0.59));
+  }
+
+.mascot3 {
+  position:fixed;
+  bottom:0px;
+  left:80%;
+  max-width:30%;
+  max-height:25%;
+  opacity: 0.7;
+  filter: drop-shadow(4px 0px 5px rgba(228, 14, 255, 0.59));
+  }
+
+.mascot:hover {
+  opacity: 1;
+  filter: drop-shadow(-4px 0px 2px rgba(14, 255, 81, 0.59))
+}
+.mascot2:hover{
+  opacity: 1;
+  filter: drop-shadow(4px 0px 2px rgba(14, 255, 81, 0.59))
+}
+.mascot3:hover{
+  opacity: 1;
+  filter: drop-shadow(-4px 0px 2px rgba(14, 255, 81, 0.59))
+}
