--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    --accent: #08010d;
+    --accent: #bd93f9;
     --banner: 'Welcome, Girouette';
 }
 
@@ -58,8 +58,8 @@
 
 body, html {
     height: 100vh;
-    background: linear-gradient(transparent, rgba(255, 165, 230, .15) 200%),
-                url("../img/128-194.jpg") repeat, #000000;
+    background: linear-gradient(transparent, rgb(15, 10, 18) 500%),
+                url("../img/green-gobbler.png") repeat, #000000;
 }
 
 .\5f nav {
@@ -74,11 +74,11 @@ body, html {
     top: 0;
     bottom: 1;
     background: grey;
-    box-shadow: 0 2px 15px rgba(124, 2, 2, 0.49);
-    border-bottom: 5px solid var(--accent);
-    border-top: 5px solid var(--accent);
-    border-left: 5px solid var(--accent);
-    border-right: 5px solid var(--accent);
+    box-shadow: 0 2px 12px rgba(189, 147, 249, 0.49);
+    border-bottom: 2px solid var(--accent);
+    border-top: 2px solid var(--accent);
+    border-left: 2px solid var(--accent);
+    border-right: 2px solid var(--accent);
 }
 
 .\5f nav section {
@@ -111,7 +111,7 @@ body, html {
     padding: 1em .5em;
     max-height: 500px;
     overflow-y: scroll;
-    box-shadow: 4px 7px 5px rgba(11, 60, 5, 0.38);
+    box-shadow: 1px 0px 6px rgba(68, 71, 90, 0.3);
     white-space: nowrap;
 }
 
@@ -128,14 +128,14 @@ body, html {
 
 .\5f nav section ul li a {
     font: 600 11pt 'BEYNO', sans-serif;
-    color: #1bff91;
+    color: #50fa7b;
     text-decoration: none;
-    text-shadow: 2px 1.5px #ab0404
+
 }
 
 .\5f nav section h1 {
     cursor: default;
-    color: #1bff91;
+    color: #ff79c6;
     font-weight: 700;
     font: 700 15pt 'Beyno', sans-serif;
     letter-spacing: .7px;
@@ -163,13 +163,10 @@ body, html {
 .\5f nav::after {
     content: var(--banner);
     bottom: -2em;
-    color: #1bff91;
+    color: #ff79c6;
     left: 2;
-    font: 600 22pt 'BEYNO', sans-serif;
+    font: 600 22pt 'Beyno', sans-serif;
     letter-spacing: 5px;
-    text-shadow: 2px 1.5px #ab0404;
-    box-shadow: 0px 0px 50px rgba(46, 144, 30, 0.5);
-    background-color: rgba(46, 144, 30, 0.12);
 }
 
 
@@ -230,11 +227,10 @@ body, html {
 .mascot2 {
   position:fixed;
   bottom:0px;
-  left:43%;
+  left:0%;
   max-width:20%;
   max-height:20%;
-  opacity: 0.7;
-  filter: drop-shadow(-4px 0px 2px rgba(228, 14, 255, 0.59));
+  opacity: 0.95;
   }
 
 .mascot3 {
@@ -253,7 +249,7 @@ body, html {
 }
 .mascot2:hover{
   opacity: 1;
-  filter: drop-shadow(4px 0px 2px rgba(14, 255, 81, 0.59))
+)
 }
 .mascot3:hover{
   opacity: 1;
