--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @font-face {
-    font-family: "BEYNO";
-    src: url('../fonts/BEYNO.ttf');
+    font-family: "scientifica";
+    src: url('../fonts/scientifica.ttf');
 }
 
 :root {
